--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  url_launcher: ^6.0.20
-  share_plus: ^7.2.1
+  url_launcher: ^6.2.5
+  share_plus: ^7.2.2
   http: ^0.13.0
+  geolocator: ^10.1.1
 
 dev_dependencies:
   flutter_test:
