--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,9 @@ dependencies:
   url_launcher: ^6.2.5
   share_plus: ^7.2.2
   http: ^0.13.0
-  geolocator: ^10.1.1
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  path_provider: ^2.1.2
+  geolocator: ^10.1.0
+  google_maps_flutter: ^2.5.0
+  google_maps_flutter_web: ^0.5.4+1
 
 dev_dependencies:
   flutter_test:
