--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geolocator: ^10.1.0
   google_maps_flutter: ^2.5.0
   google_maps_flutter_web: ^0.5.4+1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
