--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^1.0.8
   url_launcher: ^6.2.5
-  share_plus: ^7.2.2
-  http: ^0.13.0
-  geolocator: ^10.1.0
+  share_plus: ^11.0.0
+  http: ^1.4.0
+  geolocator: ^14.0.2
   google_maps_flutter: ^2.5.0
   google_maps_flutter_web: ^0.5.4+1
   shared_preferences: ^2.2.2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +50,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
