--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   google_maps_flutter_web: ^0.5.4+1
   shared_preferences: ^2.2.2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
