--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,13 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  url_launcher: ^6.2.5
+  url_launcher: ^6.2.6
   share_plus: ^11.0.0
   http: ^1.4.0
   geolocator: ^14.0.2
-  google_maps_flutter: ^2.5.0
-  google_maps_flutter_web: ^0.5.4+1
-  shared_preferences: ^2.2.2
+  google_maps_flutter: ^2.6.0
+  google_maps_flutter_web: ^0.5.5
+  shared_preferences: ^2.2.3
   cached_network_image: ^3.3.1
 
 dev_dependencies:
