--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,11 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Flutter Chrome",
+      "name": "Flutter (Android Device)",
       "request": "launch",
       "type": "dart",
-      "deviceId": "chrome"
+      "deviceId": "RF8N31RNCLX",
+      "flutterMode": "debug",
     }
   ]
 }
