before_fixing images in android

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,12 @@
       "type": "dart",
       "deviceId": "RF8N31RNCLX",
       "flutterMode": "debug",
-    }
+    },
+    {
+      "name": "Flutter: Launch Chrome",
+      "request": "launch",
+      "type": "dart",
+      "deviceId": "chrome"
+    }    
   ]
 }
