--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  intl: ^0.18.1
   cupertino_icons: ^1.0.8
   url_launcher: ^6.2.6
   share_plus: ^11.0.0
