after_lots_of_changes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,14 +7,14 @@
       "type": "dart",
       "deviceId": "RF8N31RNCLX",
       "flutterMode": "debug",
-      "preLaunchTask": "Flutter Clean & Get"
+      "program": "lib/main.dart",
+      "preLaunchTask": "flutter prepare"
     },
     {
       "name": "Flutter: Launch Chrome",
       "request": "launch",
       "type": "dart",
       "deviceId": "chrome",
-      "preLaunchTask": "Flutter Clean & Get"
-    }    
+    }
   ]
 }
