--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.1
+  intl: ^0.20.2
   cupertino_icons: ^1.0.8
   url_launcher: ^6.2.6
   share_plus: ^11.0.0
@@ -41,6 +41,8 @@ dependencies:
   shared_preferences: ^2.2.3
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
+  animations: ^2.0.7
+  easy_localization: ^3.0.3
   
 
 dev_dependencies:
@@ -69,6 +71,7 @@ flutter:
   assets:
     - assets/images/
     - assets/events/
+    - assets/translations/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
